--- a/feature-engineering/feature-engineering-reference-guide.ipynb
+++ b/feature-engineering/feature-engineering-reference-guide.ipynb
@@ -3434,7 +3434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Variable Transformation ¶\n",
+    "## 5. Variable Transformation ¶\n",
     "Some machine learning models like linear and logistic regression assume that the variables are normally distributed. Others benefit from Gaussian-like distributions, as in such distributions the observations of X available to predict Y vary across a greater range of values. Thus, Gaussian distributed variables may boost the machine learning algorithm performance.\n",
     "\n",
     "If a variable is not normally distributed, sometimes it is possible to find a mathematical transformation so that the transformed variable is Gaussian. Typically used mathematical transformations are:\n",
