--- a/_internship-tasks/task_3/eda.ipynb
+++ b/_internship-tasks/task_3/eda.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading campaign and event data\n",
     "data_campaigns = pd.read_csv('campaigns_data.csv')\n",
     "data_events = pd.read_csv('events_data.csv')"
    ]
@@ -266,6 +267,7 @@
     }
    ],
    "source": [
+    "# Checking the structure and data types in the events dataset\n",
     "data_events.info()"
    ]
   },
@@ -286,6 +288,7 @@
     }
    ],
    "source": [
+    "# Finding columns with missing values\n",
     "cols_with_missing = [col for col in data_events.columns\n",
     "                     if data_events[col].isnull().any()]\n",
     "cols_with_missing"
@@ -297,7 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_events = data_events.drop('page_url', axis=1)\n"
+    "\n",
+    "# Dropping the 'page_url' column \n",
+    "data_events = data_events.drop('page_url', axis=1)"
    ]
   },
   {
@@ -363,6 +368,7 @@
     }
    ],
    "source": [
+    "# Grouping data by 'event_name' and counting the number of events\n",
     "df1 = data_events.groupby(['event_name'])['user_id'].count().reset_index()\n",
     "df1 = df1.rename(columns={\"user_id\": \"event_count\"}) \n",
     "df1"
@@ -385,11 +391,19 @@
     }
    ],
    "source": [
+    "# Plotting a pie chart to show the proportion of each type of events\n",
     "plt.figure(figsize=(5, 5))\n",
     "sns.set_palette(\"deep\") \n",
     "plt.pie(df1['event_count'], labels=df1['event_name'], autopct='%1.1f%%')\n",
     "plt.title('')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Impression events dominate, accounting for 87.4% of the total events, followed by Click events (9.2%) and Downstream Conversion events (3.4%)."
    ]
   },
   {
@@ -501,6 +515,7 @@
     }
    ],
    "source": [
+    "# Grouping by 'gender' and 'event_name', then counting events\n",
     "df2 = data_events.groupby(['gender','event_name'])['user_id'].count().reset_index()\n",
     "df2 = df2.rename(columns={\"user_id\": \"event_count\"}) \n",
     "df2"
@@ -523,11 +538,19 @@
     }
    ],
    "source": [
+    "# Plotting a histogram to visualize event counts by gender\n",
     "plt.figure(figsize=(5, 5))\n",
     "sns.set_palette(\"deep\")\n",
     "sns.histplot(data=data_events, x=\"event_name\", hue=\"gender\", multiple=\"dodge\", shrink=.8)\n",
     "plt.title('')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Male users have the highest event counts across all categories, especially in Impressions."
    ]
   },
   {
@@ -647,9 +670,11 @@
     }
    ],
    "source": [
+    "# Grouping by 'advertiser' and counting events for each advertiser\n",
     "df3 = data_events.groupby(['advertiser'])['user_id'].count().reset_index()\n",
     "df3 = df3.rename(columns={\"user_id\": \"event_count\"}) \n",
     "df3 = df3.sort_values(by='event_count', ascending=False)\n",
+    "# Filtering to include only advertisers with more than 1.5 million events\n",
     "df3 = df3[df3['event_count'] > 1500000]\n",
     "df3"
    ]
@@ -680,11 +705,19 @@
     }
    ],
    "source": [
+    "# Plotting a bar chart to show event counts by advertiser\n",
     "plt.figure(figsize=(5, 5))\n",
     "sns.set_palette(\"deep\")\n",
     "sns.catplot(data=df3, x=\"event_count\", y=\"advertiser\", kind=\"bar\")\n",
     "plt.title('')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Subway leads the advertisers with the most user interactions, followed by YUM! Brands, McDonald's, and others."
    ]
   },
   {
@@ -859,6 +892,7 @@
     }
    ],
    "source": [
+    "# Grouping by 'income' and 'gender', then counting events\n",
     "df4 = data_events.groupby(['income','gender'])['user_id'].count().reset_index()\n",
     "df4 = df4.rename(columns={\"user_id\": \"event_count\"}) \n",
     "df4"
@@ -870,6 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a function to assign numeric values to income categories\n",
     "def f(row):\n",
     "    if row['income'] == '25k and below':\n",
     "        val = 25000\n",
@@ -1013,7 +1048,9 @@
     }
    ],
    "source": [
+    "# Applying the function to create a new 'avg_income' column\n",
     "df4['avg_income'] = df4.apply(f, axis=1)\n",
+    "# Filtering out unknown or zero income values and unknown gender entries\n",
     "df4 = df4[df4['avg_income'] != 0]\n",
     "df4 = df4[df4['gender'] != 'unknown']\n",
     "df4"
@@ -1036,6 +1073,7 @@
     }
    ],
    "source": [
+    "# Plotting a bar chart to show event counts by income and gender\n",
     "plt.figure(figsize=(5, 5))\n",
     "sns.set_palette(\"deep\")\n",
     "sns.barplot(df4, x=\"event_count\", y=\"avg_income\", hue=\"gender\", orient=\"y\")\n",
@@ -1044,11 +1082,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Across all income groups, males show higher engagement than females, especially in the $75k - $100k and $100k+ income groups."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merging event data with campaign data on 'campaign' and 'campaign_id'\n",
     "data_events=data_events.merge(data_campaigns, left_on='campaign', right_on='campaign_id')"
    ]
   },
@@ -1175,6 +1221,7 @@
     }
    ],
    "source": [
+    "# Grouping by 'campaign_name' and counting events for each campaign\n",
     "df5 = data_events.groupby(['campaign_name'])['user_id'].count().reset_index()\n",
     "df5 = df5.rename(columns={\"user_id\": \"event_count\"}) \n",
     "df5 = df5.sort_values(by='event_count', ascending=False)\n",
@@ -1207,6 +1254,7 @@
     }
    ],
    "source": [
+    "# Plotting a bar chart to show event counts by campaign\n",
     "plt.figure(figsize=(5, 5))\n",
     "sns.set_palette(\"deep\")\n",
     "sns.catplot(data=df5, x=\"event_count\", y=\"campaign_name\", kind=\"bar\")\n",
@@ -1340,8 +1388,10 @@
     }
    ],
    "source": [
+    "# Grouping by 'campaign_name' and 'income', then counting events\n",
     "df6 = data_events.groupby(['campaign_name','income'])['user_id'].count().reset_index()\n",
     "df6 = df6.rename(columns={\"user_id\": \"event_count\"}) \n",
+    "# Filtering out unknown income values\n",
     "df6 = df6[df6['income'] != 'unknown']\n",
     "df6"
    ]
@@ -1484,9 +1534,10 @@
     }
    ],
    "source": [
+    "# Applying the income function to get average income values\n",
     "df6['avg_income'] = df6.apply(f, axis=1)\n",
+    "# Filtering out zero income values\n",
     "df6 = df6[df6['avg_income'] != 0]\n",
-    "#df4 = df4[df4['gender'] != 'unknown']\n",
     "df6"
    ]
   },
@@ -1507,11 +1558,21 @@
     }
    ],
    "source": [
+    "# Plotting a bar chart to show event counts by campaign and income\n",
     "plt.figure(figsize=(7, 15))\n",
     "sns.set_palette(\"deep\")\n",
     "sns.barplot(df6, x=\"event_count\", y=\"campaign_name\", hue=\"income\")\n",
     "plt.title('')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Campaigns like Dream Burger and Flame Broiled are particularly popular among higher-income groups, especially those in the $50k - $75k range.\n",
+    "\n",
+    "#### There are clear differences in campaign performance based on income level, suggesting that certain campaigns resonate more with specific income groups."
    ]
   },
   {
