--- a/_internship-tasks/task_5/connect_to_db_psycopg2.ipynb
+++ b/_internship-tasks/task_5/connect_to_db_psycopg2.ipynb
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Count clicks in the impressions table.\n",
     "sql_query = \"\"\"\n",
     "SELECT count(*)\n",
     "  FROM impressions \n",
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Get distinct OS versions.\n",
     "sql_query = \"\"\"\n",
     "SELECT DISTINCT os_version\n",
     "  FROM impressions;\n",
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Sum clicks for 4G-disabled devices by OS version.\n",
     "sql_query = \"\"\"\n",
     "SELECT is_4G, os_version, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Sum clicks for apps with app_code > 500.\n",
     "sql_query = \"\"\"\n",
     "SELECT app_code, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Find users with exactly 10 clicks.\n",
     "sql_query = \"\"\"\n",
     "SELECT user_id, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "# Define your SQL query\n",
+    "# Define your SQL query. Filter view logs for Android devices and items with item_id > 132861.\n",
     "sql_query = \"\"\"\n",
     "SELECT *\n",
     "FROM viewlog\n",
