--- a/_internship-tasks/task_5/connect_to_db_sqlalchemy.ipynb
+++ b/_internship-tasks/task_5/connect_to_db_sqlalchemy.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Count clicks in the impressions table.\n",
     "sql_query = \"\"\"\n",
     "SELECT count(*)\n",
     "  FROM impressions \n",
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Get distinct OS versions.\n",
     "sql_query = \"\"\"\n",
     "SELECT DISTINCT os_version\n",
     "  FROM impressions;\n",
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Sum clicks for 4G-disabled devices by OS version.\n",
     "sql_query = \"\"\"\n",
     "SELECT is_4G, os_version, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Sum clicks for apps with app_code > 500.\n",
     "sql_query = \"\"\"\n",
     "SELECT app_code, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Find users with exactly 10 clicks.\n",
     "sql_query = \"\"\"\n",
     "SELECT user_id, sum(is_click) as countClick\n",
     "  FROM impressions\n",
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "# Define the SQL query\n",
+    "# Define your SQL query. Filter view logs for Android devices and items with item_id > 132861.\n",
     "sql_query = \"\"\"\n",
     "SELECT *\n",
     "FROM viewlog\n",
@@ -260,8 +260,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
